# modfish

./: .gitignore  HISTORY.md  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
src/modfish/: __init__.py  io.py  utils.py
tests/: test_io.py  test_modfish.py  test_utils.py
tests/data/: Epsigrid.mat  FCTDgrid.mat
